# aicity2026-track6

./: .gitignore  NOTICE.md  README.md  RESULTS.md  RUN_MANIFEST.md  SUPPLEMENTARY.md
code/: Dockerfile  README.md  pyproject.toml
code/configs/: base_704.yaml  l0_base_704.yaml  l1_frozen_1120.yaml  l2_rect_1280x736.yaml  l3_finetune_1120.yaml  l4_grayworld_1120.yaml
code/extra_experiments/: README.md  export_onnx.py  export_onnx.schema.json  stress_eval.py  stress_eval.schema.json  sweep_resolution.py
code/scripts/: benchmark.py  benchmark.schema.json  create_pretrained_model.py  package_predictions.py  train.py  train.schema.json  visualize.py  wbf_ensemble.py
code/src/trainer_object_detection/: aug_presets.py  utils.py  wbf.py  wrapped_model.py
