[project]
name = "trainer-object-detection"
version = "0.1.1"
description = "Object detection trainer for the Hafnia Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cyclopts==4.5.1",
    "hafnia>=0.7.10",
    "nvidia-ml-py>=13.595.45",           # To log GPU metrics in tracker
    "pytest>=9.0.1",
    "rfdetr[train,loggers,onnx]==1.8.1",
]

# Using hafnia:
# - As a package with "uv add hafnia==0.4.1". 
# - As a local editable install "uv add --editable ../hafnia"
# - As a package from git - in this example the main branch: "uv add git+https://github.com/milestone-hafnia/hafnia.git@main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trainer_object_detection", "scripts"]


[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120                                         # This should match the 'line-length' in 'pyproject.toml'
lint.select = ["C4", "E", "F", "B", "I", "W", "RUF", "Q"]
